Fixed mobile visibility bug; added invisibility option to HorizontalRule component.

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -9,3 +9,7 @@
     display: flex;
     flex-direction: column;
 }
+
+.hr-invisible {
+    height: 0px;
+}
